Name:                generateJS
Version:             0.1.1
Description:         Generates highly varied syntactically valid javascript
Author:              Peter Burns
Maintainer:          rictic@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable generatejs
  Main-is:           generateJS.hs
  Build-Depends:     base >= 3, haskell98, directory >=1, containers, control-monad-omega